--- a/style.css
+++ b/style.css
@@ -20,11 +20,10 @@ body {
   width:100%;
   height:100%;
   color : white;
-  border: 2px solid green;
   display :flex;
   justify-content: center;
   align-items: center;
-  z-index: 50000;
+  z-index: 1;
 }
 
 #canvas {
@@ -33,13 +32,9 @@ body {
   left:0;
   width:100%;
   height:100%;
-  z-index: 6000;
-  /* background-color: skyblue; */
-  opacity: .5;
-}
-
-.main{
-  border:2px solid tomato;
+  /* background-color: rgba(229, 25, 25, 0.787); */
+  /* z-index: 6000; */
+  z-index: 2;
 }
 
 #container{
@@ -49,7 +44,7 @@ body {
   justify-content: center;
   align-items: center;
   transform: translateX(calc(50% - 20vmin));
-  border: 2px solid skyblue;
+  z-index: -1;
 }
 
 #image-container {
@@ -58,26 +53,9 @@ body {
   gap:4vmin;
   width: 100%;
   height: auto;
-  /* border:5px solid white */
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* IGNORE */
 #image-container::-webkit-scrollbar{
   display: none;
 }
